# poolio

./: CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
benches/: execute.rs  foobar.rs  primes.rs
benches/bencher_cores/: execute_core.rs  mod.rs  primes_core.rs
benches/bencher_cores/pool/: mod.rs
benches/macros/: mod.rs
src/: lib.rs
tests/: basic.rs  http.rs  load.rs
