[package]
name = "poolio"
version = "0.1.1"
edition = "2021"
description = "A thread-pool."
documentation = "https://docs.rs/poolio"
readme = "README.md"
repository = "https://github.com/aronpaulson/poolio"
license = "GPL-3.0-or-later"

[dependencies]

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }
threadpool = "1.8"

[[bench]]
name = "primes"
harness = false
