[package]
name = "poolio"
version = "0.2.1"
edition = "2021"
description = "A thread-pool."
documentation = "https://docs.rs/poolio"
readme = "README.md"
repository = "https://github.com/shtsoft/poolio"
license = "GPL-3.0-or-later"
keywords = ["threadpool", "thread", "pool", "parallelism", "safe"]
categories = ["concurrency"]

[dependencies]
crossbeam = "0.8"

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }
threadpool = "1.8"

[[bench]]
name = "primes"
harness = false
